--- a/views/styles.css
+++ b/views/styles.css
@@ -1,4 +1,5 @@
 /* styles.css */
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #343541;
@@ -40,7 +41,7 @@ body {
     font-size: 16px;
   }
   
-  .input-container button {
+  button {
     padding: 10px;
     font-size: 16px;
     border: none;
