--- a/views/assign.ejs
+++ b/views/assign.ejs
@@ -1,34 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
-</head>
-<body>
-  <section class="main">
-    <h1>Lista dopasowanych tematów</h1>
+<section class="main">
+  <h1>Lista dopasowanych tematów</h1>
+<div class="result">
+  <% if (propozycje && propozycje.length > 0) { %>
+    <ol>
+      <% propozycje.forEach(function(propozycja) { %>
+        <li>
+          <strong>
+            <a href="">
+              <%= propozycja.temat %>
+            </a>
+          </strong><br>
+          <em>Promotor: <%= propozycja.promotor %></em>
+        </li>
+      <% }) %>
+    </ol>
+  <% } else { %>
+    <p>Brak dostępnych propozycji.</p>
+  <% } %>
+  <br>
+</div>
+  <form action="/" class="back btn">
+    <button type="submit">Powrót</button>
+  </form>
+</section>
 
-    <% if (propozycje && propozycje.length > 0) { %>
-      <ol>
-        <% propozycje.forEach(function(propozycja) { %>
-          <li>
-            <strong><%= propozycja.temat %></strong><br>
-            <em>Promotor: <%= propozycja.promotor %></em>
-          </li>
-        <% }) %>
-      </ol>
-    <% } else { %>
-      <p>Brak dostępnych propozycji.</p>
-    <% } %>
-  
-    <br>
-    <form action="/" class="back btn">
-      <button type="submit">Powrót</button>
-    </form>
-  </section>
-
-</body>
-</html>
-  
 
