--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <div id="loader">
     <div class="spinner"></div>
     <div class="text">
-      <p>Parsowanie...</p> 
+      <p>Wczytywanie...</p> 
     </div>
 
   </div>
