--- a/views/styles.css
+++ b/views/styles.css
@@ -95,11 +95,13 @@ body {
   }
   #loader {
     display: flex;
+    display: none;
     flex-direction: column;
     position: fixed;
     inset: 0;
     background-color: #343541;
     justify-content: center;
+    align-items: center;
     
   }
   .text p{
