duża zmiana frontendu

--- a/views/assign.ejs
+++ b/views/assign.ejs
@@ -1,4 +1,5 @@
 <section class="main">
+  <a href="https://uz.zgora.pl/"><img href="" src="./images/logo UZ pion - CMYK.jpg"></a>
   <h1>Lista dopasowanych tematów</h1>
 <div class="result">
   <% if (propozycje && propozycje.length > 0) { %>
