--- a/views/styles.css
+++ b/views/styles.css
@@ -1,22 +1,79 @@
-/* styles.css */
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #343541;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    position:relative;
   }
-  
+  .veryfi-main{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height:100vh;
+  }
+  .input-mail{
+    position: relative;
+    justify-self: center;
+  }
+  .input-mail input{
+    margin-top: 80px;
+    size:500px;
+    font-size:30px;
+    width: 99%;
+    outline: none;
+    border: none;
+    transition: background-color 1s ease 0s ;
+  }
+
+  .input-mail input:hover, 
+  .input-container form input:hover, 
+  .input-container form textarea:hover{
+    background-color:rgba(169, 169, 169, 0.507);
+    
+  }
+  .error{
+    justify-self: center;
+    text-align: left;
+    width: 100%;
+    max-height: 40px;
+    
+  }
+   .input-mail::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.707);
+   }
+  button {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 100%);
+    background-size: 200% 100%;
+    background-position: left;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-position 1s ease;
+  }
+
+  button:hover {
+    background-position: right;
+  }
+
   .main {
     width: 100%;
     max-width: 800px;
     background-color: #fff;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
   }
   
   .main h1 {
@@ -25,22 +82,36 @@ body {
     text-align: center;
     margin-bottom: 20px;
   }
-  
-  .input-container {
-    padding: 5px;
+  .input-container{
+    position: relative;
+  }
+  .input-container form{
     display: flex;
     flex-direction: column;
-    gap: 20%;
+    gap: 20px;
+    
   }
-  
-  .input-container input,
-  .input-container textarea {
+
+  .input-container form input, .input-container form textarea{
+    size:500px;
+    font-size:30px;
+    width: 99%;
+    outline: none;
+    border: none;
+    transition: background-color 1s ease 0s ;
+  }
+  .form-field{
     width: 100%;
-    padding: 10px;
-    margin-bottom: 5px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
+    position:relative
+  }
+  .form-field::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.707);
   }
 
   button {
@@ -82,10 +153,6 @@ body {
     
   
   }
-  .input-container button:hover {
-    background-color: #0056b3;
-  }
-  
   #output {
     margin-top: 20px;
     padding: 10px;
@@ -99,8 +166,8 @@ body {
     flex-direction: column;
     position: fixed;
     inset: 0;
-    background-color: #343541;
     justify-content: center;
+    background-color: white;
     align-items: center;
     
   }
@@ -115,6 +182,19 @@ body {
     border-top-color: #007bff;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+  }
+  .veryfi-main img{
+    align-items: start;
+    max-width: 400px;
+    background-image:url("./images/logo\ UZ\ pion\ -\ CMYK.jpg")
+  }
+  .main img{
+    margin: 2rem;
+    max-width: 200px;
+    position: absolute;
+    right: 0;
+    top:0
+
   }
   
   @keyframes spin {
