--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -1,20 +1,36 @@
- 
+<body id="inne-tlo">
+  <div class="veryfi-main">
+    <img src="./images/logo UZ pion - CMYK.jpg">
+    <div class="header">
+      <h1></h1>
+    </div>
+    
+      <% if (step === 'email') { %>
+    <div class="input-mail">
+      <form action="/verify" method="POST" class="form-vertical">
+        <input type="email" name="email" placeholder="Adres e-mail" required>
+    </div>
+    <div class="error">
+      <% if (error) { %>
+        <p style="color: red;"><%= error %></p>
+      <% } %>
+    </div>
+        <button  type="submit">Wyślij kod</button>
+      </form>
+      <% } else if (step === 'code') { %>
+    <div class="input-mail">
+      <form action="/verify" method="POST" class="form-vertical">
+        <input hidden="true"  name="email" value="<%= email %>">
+        <input type="text" name="code" placeholder="Wpisz kod z e-maila" required>
+    </div>
+    <div class="error">
+      <% if (error) { %>
+        <p style="color: red;"><%= error %></p>
+      <% } %>
+    </div>
+        <button type="submit">Potwierdź</button>
+        </form>
+      <% } %>
+  </div>
+</body>
 
-  <% if (error) { %>
-    <p style="color: red;"><%= error %></p>
-  <% } %>
-
-  <% if (step === 'email') { %>
-     <h1>Weryfikacja adresu e-mail</h1>
-    <form action="/verify" method="POST">
-      <input type="email" name="email" placeholder="Adres e-mail" required>
-      <button type="submit">Wyślij kod</button>
-    </form>
-  <% } else if (step === 'code') { %>
-    <h1>Weryfikacja Kodu</h1>
-    <form action="/verify" method="POST">
-      <input type="hidden" name="email" value="<%= email %>">
-      <input type="text" name="code" placeholder="Wpisz kod z e-maila" required>
-      <button type="submit">Potwierdź</button>
-    </form>
-  <% } %>
